
* Analytic derivatives used in optimisation for spline (odds and
  hazard scale, not normal), exponential, Weibull and Gompertz models.

* Default to BFGS optimisation method, which uses derivatives where
  available and should be much faster, instead of Nelder-Mead.

* Work around NaN warnings from spline models presumably due to
  parameters violating implicit constraints.


Version 0.1.5 (2012-08-29)
-------------------------

* Data are now stored in fitted flexsurvreg and flexsurvspline model
  objects, avoiding environment search errors and allowing package
  functions to be called within other functions.  Thanks to Hanna
  Daniel for the report.

* Gompertz documentation clarified for the case when there is a chance
  of living forever.  qgompertz and rgompertz now return Inf in these
  cases, with no warning, instead of NaN.  Thanks to Michael Sweeting.


Version 0.1.4 (2012-03-22)
--------------------------

* maxt argument in plot.flexsurvreg.

* Plots no longer complain if data named "dat".

* Corrected wrong bug fix from Version 0.1.3 for transforming
  parameter estimates in output when fixedpars=TRUE.

* AIC penalty corrected for models with some fixed parameters.

* qgengamma corrected for parameter Q<0.  Thanks to Benn Ackley.


Version 0.1.3 (2012-01-17)
--------------------------

* No longer complains about invalid initial values when there are zero
  survival times.

* Don't transform parameter estimates in output when fixedpars=TRUE.

* Checking functions for distribution utilities don't complain about
  vectorised parameter values.


Version 0.1.2 (2011-11-08)
--------------------------

* Initial CRAN release.

* More features in print output for flexsurvreg and flexsurvspline
  models.


Version 0.1.1 (2011-04-19)
--------------------------

* Fix of drop=FALSE bug in flexsurvspline.inits which caused
  flexsurvspline to fail with single covariates.


Version 0.1 (2011-03-14)
------------------------
Initial release